[tool.poetry]
name = "scullery"
version = "0.1.19"
description = "A utility library based on KaithemAutomation featuring a GStreamer wrapper"
authors = ["Daniel Dunn <dannydunn@eternityforest.com>"]
license = "LGPLv2+"
readme = "README.md"
packages = [{ include = "scullery" }]

[tool.poetry.dependencies]
python = "^3.10"
beartype = "*"
PyYAML = "^6.0.1"
paho-mqtt = "*"
pint = "*"
pyyaml = "*"

[tool.poetry.group.dev.dependencies]
pytest = "*"

[tool.ruff]
line-length = 140


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
