[project]
name = "scullery"
version = "0.4.0"
description = "A utility library based on KaithemAutomation featuring a GStreamer wrapper"
authors = [ { name = "Daniel Dunn" } ]
license = "LGPL-2.0-or-later"
readme = "README.md"
requires-python = ">=3.11"

dependencies=[
    "PyYAML ~= 6.0.1",
    "pint",
    "pyyaml",
    "pydantic"
]




[dependency-groups]
dev = [
    "pytest",
]


[tool.ruff]
line-length = 140


[build-system]
requires = ["uv_build>=0.8.14,<0.9.0"]
build-backend = "uv_build"
